Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26758

Valgrind Memory Analyzer isn't stopped in output pane

XMLWordPrintable

    • 46db545a90 (qt-creator/qt-creator/master) 46db545a90 (qt-creator/qt-creator/qmlprojectstorage)

      After running Valgrind Memory Analyzer on a remote device, and when analyzing finishes, it's not finished on output pane. Also later, when closing Creator a prompt dialog appears that the application is still running.

      The attaches picture shows this state. The Memory Analyzer is marked as stopped inside Memcheck pane (red square button disabled), but marked as running inside Application Output pane (red square button enabled).

        1. MemoryAnalyzer.png
          22 kB
          Jarek Kobus
        For Gerrit Dashboard: QTCREATORBUG-26758
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes